# data_afp

./: .gitignore  A-E_AFP.ipynb  A-E_AFP.nbconvert.ipynb  A-E_Cuprum.ipynb  README.md  ValoresCuotaAFP.ipynb  ValoresCuotaAFP.nbconvert.ipynb  ValoresCuotaCapital.ipynb  ValoresCuotaCuprum.ipynb  ValoresCuotaHabitat.ipynb  ValoresCuotaModelo.ipynb  ValoresCuotaPlanvital.ipynb  ValoresCuotaProvida.ipynb  clean_vc.ipynb  cleancsv.py  copynb.py  curator.py  datatoolbox.py  datatoolbox.rb  get_quandl.py  index.html  mise.toml  pyproject.toml  requirements.txt  run.sh  run_sp.rb  spensiones.rb  test_sp.rb  upload.py  valores_cuota_2015.rb  valores_cuota_2016.rb  valores_cuota_hasta2014.rb  valores_cuota_hasta2015.rb  vc_historical.rb  vc_month.rb  vc_this_month.rb  vc_this_year.rb  vc_year.rb  vcfA2002-2014.csv  vcfA2015-2015.csv  (+13 more)
afpdata/: __init__.py  analysis.py  build.py  cli.py  parse.py  source.py
data/: PAT-ALAMEDA.csv  PAT-APORTA-FOMENTA.csv  PAT-APORTA.csv  PAT-ARMONIZA.csv  PAT-BANGUARDIA.csv  PAT-BANNUESTRA.csv  PAT-BANSANDER.csv  PAT-CAPITAL.csv  PAT-CONCORDIA.csv  PAT-CUPRUM.csv  PAT-EL-LIBERTADOR.csv  PAT-FOMENTA.csv  PAT-FUTURO.csv  PAT-GENERA.csv  PAT-HABITAT.csv  PAT-INVIERTA.csv  PAT-LABORAL.csv  PAT-MAGISTER.csv  PAT-MODELO.csv  PAT-NORPREVISION.csv  PAT-PLANVITAL.csv  PAT-PREVIPAN.csv  PAT-PROTECCION.csv  PAT-PROVIDA.csv  PAT-QUALITAS.csv  PAT-SAN-CRISTOBAL.csv  PAT-SANTA-MARIA.csv  PAT-SUMMA-BANSANDER.csv  PAT-SUMMA.csv  PAT-UNION.csv  PAT-UNO.csv  PAT-VALORA.csv  VC-ALAMEDA.csv  VC-APORTA-FOMENTA.csv  VC-APORTA.csv  VC-ARMONIZA.csv  VC-BANGUARDIA.csv  (+42 more)
(+36 files in other folders)
