[project]
name = "afpdata"
version = "1.0.0"
description = "Descarga y procesamiento de valores cuota y patrimonio de los fondos AFP de Chile (Superintendencia de Pensiones)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "collabmarket" }]
dependencies = [
    "pandas>=2.1",
    "requests>=2.31",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/collabmarket/data_afp"

[project.scripts]
afpdata = "afpdata.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["afpdata"]
